# EVM

./: .clang-format
ComputerGraphic/LR2/: rayAlg.py
ComputerGraphic/LR3/: bSpline.py  bezieCurve.py  brezenhemAlg.py  rayAlg.py
ComputerGraphic/LR4/: bSpline.py  bezieCurve.py  brezenhemAlg.py  colorInterpolation.py  ЛК2.txt
ComputerGraphic/LR5/: aproximate.py
ComputerGraphic/LR6/: polygons.py  ЛК3.txt
ComputerGraphic/LR7/: text_polygon.py
ComputerGraphic/LR8/: zBuffer.py
LB/: Analyzer.cpp  Analyzer.h  Project1.cbproj  Project1.cbproj.local  Unit1.cpp  Unit1.dfm  avlTree.cpp
LB/__history/: Analyzer.cpp.~1~  Analyzer.cpp.~2~  Analyzer.h.~1~  Analyzer.h.~2~  Unit1.cpp.~12~  Unit1.cpp.~13~  Unit1.cpp.~14~  Unit1.cpp.~15~  Unit1.cpp.~16~  Unit1.cpp.~18~  Unit1.cpp.~19~  Unit1.cpp.~20~  (+14 more)
Queue_Console_aplication/: Exceptions.h  Functions_for_activities.cpp  Functions_for_activities.h  Help_and_commands.h  Polynomial.cpp  Polynomial.h  fast_sqrt.cpp  list_d.cpp  list_d.ipp  main2.cpp  main3.cpp  pol.ipp  pr_queue.cpp  pr_queue.ipp  test.cpp
SaticAnalyzer/: Analyzer.cpp  Stack.cpp  Stack.h  actions.cpp  main_static_analyzer.cpp  rules.cpp  static_analyzer.cpp  static_analyzer.h
Translator/: Analyzer.h  Stack.cpp  Stack.h  actions.cpp  avlTree.cpp  avlTree.h  main_static_analyzer.cpp  rules.cpp  static_analyzer.cpp  static_analyzer.h
avlTree/: CMakeLists.txt  avlTree.cpp  avlTree.h  consoleWork.cpp  consoleWork.h  main.cpp
lexicalAnalyzer/: CMakeLists.txt  main.cpp
yandex_contest_stagka/: broker.cpp  country.cpp  keyboard.cpp  magic.cpp  perfect.cpp
(+22 files in other folders)
